--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
       gtag("js", new Date());
   
       gtag("config", "{{ site.analytics.google }}");
-      gtag("config", "AW-16943605271");
+      gtag("config", "{{ site.ads.google }}");
     </script>
     <!-- End Google Analytics -->
     {% endif %}
