--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,26 @@
       gtag("config", "{{ site.ads.google }}");
     </script>
     <!-- End Google Analytics -->
+    <!-- Event snippet for Page view conversion page
+    In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+    function gtag_report_conversion(url) {
+      var callback = function () {
+        if (typeof(url) != 'undefined') {
+          window.location = url;
+        }
+      };
+      gtag('event', 'conversion', {
+          'send_to': "{{ site.ads.google }}/clQVCNr78sAaEJfMq48_",
+          'event_callback': callback
+      });
+      return false;
+    }
+    </script>
+    <!-- Event snippet for Page view conversion page -->
+    <script>
+      gtag('event', 'conversion', {'send_to': "{{ site.ads.google }}/clQVCNr78sAaEJfMq48_"});
+    </script>
     {% endif %}
 
     <meta charset="utf-8">
