Adding button conversion tracking.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,9 @@
 	  document.getElementById('sendMessageButton').addEventListener('click', function() {
 	    gtag('event', 'conversion', {'send_to': "{{ site.ads.google }}/oNtiCNf78sAaEJfMq48_"});
 	  });
+	  document.getElementById('paypalDonate').addEventListener('click', function() {
+	    gtag('event', 'conversion', {'send_to': "{{ site.ads.google }}/oNtiCNf78sAaEJfMq48_"});
+	  });	  
 	  </script>
 
   </body>
