--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,5 +4,6 @@ layout: default
 {% include navheader.html %}
 {% include services.html %}
 {% include program_grid.html %}
+{% include category_grid.html %}
 {% include timeline.html %}
 {% include contact.html %}
