--- a/_includes/category_grid.html
+++ b/_includes/category_grid.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Learning Resources</h2>
-        <h3 class="section-subheading text-muted">A curated collection of STEM/STEAM Learning Resources</h3>
+        <h3 class="section-subheading text-muted">A collection of STEM/STEAM Learning Resources</h3>
       </div>
     </div>
     <div class="row">
