--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,30 +11,26 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <script type="text/javascript">var submitted_contact=false;</script>
-        <iframe name="hidden_iframe_contact" id="hidden_iframe_contact" style="display:none;"
-          onload="if(submitted_contact) { document.getElementById('success').innerHTML = '<div class=\'alert alert-success\'><strong>Your message has been sent. </strong></div>'; document.getElementById('contactForm').reset(); }"></iframe>
         <form id="contactForm"
-          action="https://docs.google.com/forms/d/e/1FAIpQLSfVrEX0Fiy6xGPQ9xxJD0sFsygD8k7laf8GjrHDjcXNVhgcaA/formResponse"
-          target="hidden_iframe_contact" onsubmit="submitted_contact=true;"
+          action="https://formspree.io/{% if site.formspree_form_path %}{{ site.formspree_form_path }}{% else %}{{ site.email }}{% endif %}"
           novalidate="novalidate" method="POST">
           <!--name="sentMessage"-->
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <input name="entry.339900415" class="form-control" id="name" type="text"
+                <input name="name" class="form-control" id="name" type="text"
                   placeholder="{{ site.data.sitetext[site.locale].contact.name | default: "Name*" }}"
                   required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.name-validation | default: "Please enter your name." }}">
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
-                <input name="entry.265507318" class="form-control" id="email" type="email"
+                <input name="_replyto" class="form-control" id="email" type="email"
                   placeholder="{{ site.data.sitetext[site.locale].contact.email | default: "Email*" }}"
                   required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.email-validation | default: "Please enter your email address." }}">
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
-                <input name="entry.1146594570" class="form-control" id="phone" type="tel"
+                <input name="phone" class="form-control" id="phone" type="tel"
                   placeholder="{{ site.data.sitetext[site.locale].contact.phone | default: "Phone Number*" }}"
                   required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.phone-validation | default: "Please enter your phone number." }}">
                 <p class="help-block text-danger"></p>
@@ -42,18 +38,22 @@
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <textarea name="entry.1150177072" class="form-control" id="message"
+                <textarea name="message" class="form-control" id="message"
                   placeholder="{{ site.data.sitetext[site.locale].contact.message | default: "Message*" }}"
                   required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.message-validation | default: "Please enter a message." }}"></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
+            <input type="hidden" name="_subject" id="email-subject"
+              value="{{ site.data.sitetext[site.locale].contact.subject | default: "Contact Form Submission" }}">
             <div class="clearfix"></div>
             <div class="col-lg-12 text-center">
               <div id="success"></div>
               <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase"
                 type="submit">{{ site.data.sitetext[site.locale].contact.submit | default: "Send Message" }}</button>
             </div>
+            <input type="text" name="_gotcha" style="display:none">
+            <input type="hidden" name="_next" value="#" />
           </div>
         </form>
       </div>
@@ -72,30 +72,26 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <script type="text/javascript">var submitted_contact_default=false;</script>
-        <iframe name="hidden_iframe_contact_default" id="hidden_iframe_contact_default" style="display:none;"
-          onload="if(submitted_contact_default) { document.getElementById('success').innerHTML = '<div class=\'alert alert-success\'><strong>Your message has been sent. </strong></div>'; document.getElementById('contactForm').reset(); }"></iframe>
         <form id="contactForm"
-          action="https://docs.google.com/forms/d/e/1FAIpQLSfVrEX0Fiy6xGPQ9xxJD0sFsygD8k7laf8GjrHDjcXNVhgcaA/formResponse"
-          target="hidden_iframe_contact_default" onsubmit="submitted_contact_default=true;"
+          action="https://formspree.io/{% if site.formspree_form_path %}{{ site.formspree_form_path }}{% else %}{{ site.email }}{% endif %}"
           novalidate="novalidate" method="POST">
           <!--name="sentMessage"-->
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <input name="entry.339900415" class="form-control" id="name" type="text"
+                <input name="name" class="form-control" id="name" type="text"
                   placeholder="{{ site.data.sitetext.contact.name | default: "Name*" }}"
                   required="required" data-validation-required-message="{{ site.data.sitetext.contact.name-validation | default: "Please enter your name." }}">
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
-                <input name="entry.265507318" class="form-control" id="email" type="email"
+                <input name="_replyto" class="form-control" id="email" type="email"
                   placeholder="{{ site.data.sitetext.contact.email | default: "Email*" }}"
                   required="required" data-validation-required-message="{{ site.data.sitetext.contact.email-validation | default: "Please enter your email address." }}">
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
-                <input name="entry.1146594570" class="form-control" id="phone" type="tel"
+                <input name="phone" class="form-control" id="phone" type="tel"
                   placeholder="{{ site.data.sitetext.contact.phone | default: "Phone Number*" }}"
                   required="required" data-validation-required-message="{{ site.data.sitetext.contact.phone-validation | default: "Please enter your phone number." }}">
                 <p class="help-block text-danger"></p>
@@ -103,18 +99,22 @@
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <textarea name="entry.1150177072" class="form-control" id="message"
+                <textarea name="message" class="form-control" id="message"
                   placeholder="{{ site.data.sitetext.contact.message | default: "Message*" }}"
                   required="required" data-validation-required-message="{{ site.data.sitetext.contact.message-validation | default: "Please enter a message." }}"></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
+            <input type="hidden" name="_subject" id="email-subject"
+              value="{{ site.data.sitetext.contact.subject | default: "Contact Form Submission" }}">
             <div class="clearfix"></div>
             <div class="col-lg-12 text-center">
               <div id="success"></div>
               <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase"
                 type="submit">{{ site.data.sitetext.contact.submit | default: "Send Message" }}</button>
             </div>
+            <input type="text" name="_gotcha" style="display:none">
+            <input type="hidden" name="_next" value="#" />
           </div>
         </form>
       </div>
