--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,7 @@
       gtag('event', 'conversion', {'send_to': "{{ site.ads.google }}/clQVCNr78sAaEJfMq48_"});
     </script>
     {% endif %}
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
