--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -49,12 +49,12 @@
               </div>
             </div>
             <div class="clearfix"></div>
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12 pt-4 text-center">
               <div id="success"></div>
               <button id="sendMessageButtonFoot" class="btn btn-primary btn-xl text-uppercase"
                 type="submit">{{ site.data.sitetext[site.locale].contact.submit | default: "Send Message" }}</button>
             </div>
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12 p-4 text-center">
               <div id="turnstile-container"></div>
             </div>            
           </div>
