Revert "Accessibility Improvements for WCAG 2.1 Level AA"

--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -7,7 +7,7 @@ layout: default
 <header class="masthead" style="background-image: url('/assets/img/store/rupixen-com-Q59HmzK38eQ-unsplash-bg.jpg')">
     <div class="container">
       <div class="intro-text">
-      <h1 class="intro-lead-in">Store</h1>
+      <div class="intro-lead-in">Store</div>
       <div class="intro-heading text-uppercase">Ecommerce</div>
       </div>
     </div>
