--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,14 +21,8 @@
             {% for link in site.data.sitetext[site.locale].footer.social %}
             <li class="list-inline-item">
               {% if link.url %}
-              {% assign social_name = link.url | split: "." | last | split: "/" | first | capitalize %}
-              {% if link.url contains "youtube" %}{% assign social_name = "YouTube" %}{% endif %}
-              {% if link.url contains "x.com" %}{% assign social_name = "X (Twitter)" %}{% endif %}
-              {% if link.url contains "github" %}{% assign social_name = "GitHub" %}{% endif %}
-              {% if link.url contains "facebook" %}{% assign social_name = "Facebook" %}{% endif %}
-              {% if link.url contains "discord" %}{% assign social_name = "Discord" %}{% endif %}
-              <a href="{{ link.url }}" aria-label="{{ social_name }}">
-                {% if link.icon %}<i class="{{ link.icon }}" aria-hidden="true"></i>{% endif %}
+              <a href="{{ link.url }}">
+                {% if link.icon %}<i class="{{ link.icon }}"></i>{% endif %}
               </a>
               {% endif %}
             </li>
@@ -72,14 +66,8 @@
             {% for link in site.data.sitetext.footer.social %}
             <li class="list-inline-item">
               {% if link.url %}
-              {% assign social_name = link.url | split: "." | last | split: "/" | first | capitalize %}
-              {% if link.url contains "youtube" %}{% assign social_name = "YouTube" %}{% endif %}
-              {% if link.url contains "x.com" %}{% assign social_name = "X (Twitter)" %}{% endif %}
-              {% if link.url contains "github" %}{% assign social_name = "GitHub" %}{% endif %}
-              {% if link.url contains "facebook" %}{% assign social_name = "Facebook" %}{% endif %}
-              {% if link.url contains "discord" %}{% assign social_name = "Discord" %}{% endif %}
-              <a href="{{ link.url }}" aria-label="{{ social_name }}">
-                {% if link.icon %}<i class="{{ link.icon }}" aria-hidden="true"></i>{% endif %}
+              <a href="{{ link.url }}">
+                {% if link.icon %}<i class="{{ link.icon }}"></i>{% endif %}
               </a>
               {% endif %}
             </li>
