--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -46,7 +46,7 @@
       padding: 25px;
       text-align: center;
       background-color: $white;
-      h3, h4 {
+      h4 {
         margin: 0;
         text-transform: none;
       }
